--- a/src/app/bill-edit/bill-edit.component.html
+++ b/src/app/bill-edit/bill-edit.component.html
@@ -19,7 +19,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill" id="formField">
         <mat-label>Amount</mat-label>
-        <mat-icon id="currency" aria-hidden="true" aria-label="CAD icon" matPrefix>attach_money</mat-icon>
+        <mat-icon id="currency" aria-hidden="true" aria-label="money icon" matPrefix>attach_money</mat-icon>
         <input matInput [(ngModel)]="billInfo.Amount" type="number" placeholder={{data.Amount}} name="Amount" required>
       </mat-form-field><span id="currency">({{billInfo.Currency}})</span>
     </form>
