--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
     <div id="menuItems">
       <a id="links" mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive
          #rla="routerLinkActive" [routerLinkActiveOptions]="{exact:true}" [active]="rla.isActive">
-        <mat-icon id="icons" class="example-tab-icon">{{link.icon}}</mat-icon>
+        <mat-icon id="icons" aria-hidden="true" aria-label="link icon" class="example-tab-icon">{{link.icon}}</mat-icon>
         <span id="linkLabel">{{link.label}}</span>
       </a>
     </div>
