--- a/src/app/user-update-password/user-update-password.component.html
+++ b/src/app/user-update-password/user-update-password.component.html
@@ -10,7 +10,7 @@
 
     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <mat-icon aria-hidden="true" aria-label="visibility icon">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
 
   </mat-form-field>
