--- a/src/app/bill-details/bill-details.component.html
+++ b/src/app/bill-details/bill-details.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
 
   <mat-card-content id="text">
-    <p>Amount: ${{data.Amount}} {{data.Currency}}</p>
+    <p>Amount: {{data.Amount}} {{data.Currency}}</p>
     <p>Date: {{billDate}}</p>
 
 
