--- a/src/app/expense-edit/expense-edit.component.html
+++ b/src/app/expense-edit/expense-edit.component.html
@@ -39,10 +39,15 @@
 
       <mat-form-field appearance="fill" id="formField">
         <mat-label>Amount</mat-label>
-        <mat-icon id="currency" aria-hidden="true" aria-label="money icon" matPrefix>attach_money</mat-icon>
+        <mat-icon id="currency" aria-hidden="true" aria-label="money icon" matPrefix>
+          {{expenseInfo.Currency === 'EUR'
+          ?
+          'euro_symbol' :expenseInfo.Currency === 'GBP' ? 'currency_pound' : 'attach_money'}}
+        </mat-icon>
         <input matInput [(ngModel)]="expenseInfo.Amount" type="number" placeholder={{data.Amount}} name="Amount"
                required>
-      </mat-form-field><span id="currency">({{expenseInfo.Currency}})</span>
+      </mat-form-field>
+
 
     </form>
   </mat-card-content>
