add button for logout

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -66,6 +66,9 @@
         <button mat-raised-button id="deleteBtn" (click)="openDeleteDialog()">
           <mat-icon aria-hidden="false" aria-label="delete icon">delete_sweep</mat-icon> Delete Profile
         </button>
+        <button mat-raised-button id="logOutBtn" (click)="logOut()">
+          <mat-icon aria-hidden="false" aria-label="logout icon">logout</mat-icon> Log Out
+        </button>
       </mat-card-actions>
 
     </mat-card-content>
