fix bug update profile due to hashedPassword

--- a/src/app/user-update-currency/user-update-currency.component.html
+++ b/src/app/user-update-currency/user-update-currency.component.html
@@ -6,7 +6,7 @@
 
   <mat-form-field appearance="fill" id="formField">
     <mat-label>Currency Preference</mat-label>
-    <mat-select matNativeControl [(ngModel)]="userData.CurrencyPref" type="text" placeholder={{data.CurrencyPref}}
+    <mat-select matNativeControl [(ngModel)]="userData.CurrencyPref" type="text" placeholder={{userData.CurrencyPref}}
                 name="CurrencyPref">
 
       <mat-option value="CAD">CAD</mat-option>
